--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -21,7 +21,7 @@
 }
 
 .header {
-  font-family: $roboto-medium;
+  font-weight: 500;
   @include letterSpacing(0.66);
   @include fontSize(25);
 }
@@ -33,13 +33,13 @@
 }
 
 .subheading {
-  font-family: $roboto-regular;
+  font-weight: 400;
   @include fontSize(14);
   text-align: left;
 }
 
 .message {
-  font-family: $roboto-medium;
+  font-weight: 500;
   @include fontSize(18);
   @include letterSpacing(0.54);
   margin-top: 1rem;
@@ -47,7 +47,7 @@
   margin: auto;
 
   span {
-    font-family: $roboto-medium;
+    font-weight: 500;
 
   }
 }
