--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -28,7 +28,7 @@ a {
 //simple card style
 .cardTitleSimple {
   @include fontSize(18);
-  font-family: $roboto-medium;
+  font-weight: 500;
   @include letterSpacing(1.8);
   color: $black-four;
   text-align: center;
@@ -43,7 +43,7 @@ a {
 // exclusive card styles
 .cardTitle {
   @include fontSize(20);
-  font-family: $roboto-bold;
+  font-weight: 700;
   @include letterSpacing(2);
   color: $black;
 }
@@ -53,7 +53,7 @@ a {
   line-height: 1.38;
   @include letterSpacing(.5);
   overflow: hidden;
-  font-family: $roboto-regular;
+  font-weight: 400;
   color: $black-five;
 }
 
@@ -65,12 +65,12 @@ a {
 
 .priceNow {
   color: $primary-color;
-  font-family: $roboto-medium;
+  font-weight: 500;
 }
 
 .priceBefore {
   color: $black-two;
-  font-family: $roboto-regular;
+  font-weight: 400;
 }
 
 .cardButton {
@@ -81,7 +81,7 @@ a {
   @include height(40);
   @include fontSize(14);
   @include borderRadius(3);
-  font-family: $roboto-bold;
+  font-weight: 700;
 }
 
 // category card styles
@@ -124,7 +124,7 @@ a {
 
 .cardTitleCat {
   @include fontSize(18);
-  font-family: $roboto-bold;
+  font-weight: 700;
   letter-spacing: .025rem;
   color: $black-four;
   @extend .addEllipsis;
@@ -135,13 +135,13 @@ a {
 }
 
 .charges {
-  font-family: $roboto-regular;
+  font-weight: 400;
   color: $brownish-grey-two;
   letter-spacing: .48px;
   @include fontSize(15);
 
   span {
-    font-family: $roboto-medium;
+    font-weight: 500;
     color: $black-four;
   }
   @include mobile {
@@ -166,7 +166,7 @@ a {
 
 .rating {
   @extend .charges;
-  font-family: $roboto-medium;
+  font-weight: 500;
   text-align: right;
   margin: 0;
   display: flex;
@@ -177,7 +177,7 @@ a {
   }
 
   span {
-    font-family: $roboto-regular;
+    font-weight: 400;
     color: $brownish-grey-two;
     @include fontSize(13);
   }
@@ -266,7 +266,7 @@ a {
   left: 2rem;
   color: $secondary-color;
   @include fontSize(14);
-  font-family: $roboto-medium;
+  font-weight: 500;
   display: flex;
   justify-content: center;
   background-color: $white;
@@ -313,7 +313,7 @@ a {
 }
 
 .note-header {
-  font-family: $roboto-bold;
+  font-weight: 700;
   @include fontSize(20);
   letter-spacing: .6px;
 }
@@ -330,7 +330,7 @@ a {
 }
 
 .note-title {
-  font-family: $roboto-bold;
+  font-weight: 700;
   color: $black-fifteen;
   @include fontSize(14);
   margin-right: .5rem;
@@ -421,7 +421,8 @@ a {
   transition: all .7s ease;
 
   h3 {
-    font-family: $roboto-medium;
+    font-family: $roboto;
+    font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
