--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -3,7 +3,7 @@
 @import '../../variables/fonts';
 
 h1 {
-  font-family: $frank-regular;
+  font-family:  $frank; font-weight: 400;
   @include fontSize(48);
   @include letterSpacing(1.2);
   line-height: 1;
