--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -17,7 +17,7 @@
   }
 
   h3 {
-    font-family: $frank-regular;
+    font-family:  $frank; font-weight: 400;
     color: $black;
     @include fontSize(30);
     @include margin(0,0,20);
@@ -42,7 +42,7 @@
   }
 
   p {
-    font-family: $roboto-regular;
+    font-weight: 400;
     @include fontSize(18);
     color: $white;
     line-height: 1.56;
@@ -68,7 +68,7 @@
   }
 
   > h1, p {
-    font-family: $frank-medium;
+    font-family:  $frank; font-weight: 500;
     line-height: 1.17;
     color: $white;
     text-align: center;
@@ -87,7 +87,7 @@
 .view-all {
   color: $secondary-color;
   @include fontSize(18);
-  font-family: $roboto-medium;
+  font-weight: 500;
   width: max-content;
   cursor: pointer;
   @include mobile {
@@ -104,7 +104,7 @@
 }
 
 .subTitleTwo {
-  font-family: $roboto-regular;
+  font-weight: 400;
   @include fontSize(18);
   color: $black;
   line-height: 1.56;
