--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -31,7 +31,8 @@ html {
 }
 
 body {
-  font-family: $roboto-regular;
+  font-family: $roboto;
+  font-weight: 400;
   font-size: 16px;
   padding: 0 !important;
   margin: 0;
@@ -49,7 +50,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $frank-regular;
+  font-family:  $frank; font-weight: 400;
 }
 
 h1,
@@ -72,7 +73,7 @@ h2 {
 .primary-button {
   font-size: 14px;
   background-color: $primary-color;
-  font-family: $roboto-medium;
+  font-weight: 500;
   @include letterSpacing(.5);
   @include padding(12,22);
   border-radius: 3.9px;
@@ -101,14 +102,14 @@ h2 {
 
   &.medium-pink {
     background-color: $medium-pink;
-    font-family: $roboto-bold;
+    font-weight: 700;
 
   }
 
   &.white {
     background-color: $white;
     color: $medium-pink;
-    font-family: $roboto-bold;
+    font-weight: 700;
 
   }
 
@@ -136,7 +137,7 @@ h2 {
 
 .text-btn {
   color: $primary-color;
-  font-family: $roboto-medium;
+  font-weight: 500;
   background: none;
   border: none;
   @include margin(0,8);
