goolge font fix inpackages

--- a/src/variables/_fonts.scss
+++ b/src/variables/_fonts.scss
@@ -50,13 +50,13 @@
 //     src: url('/fonts/OpenSans-Bold.ttf');
 // }
 
-$roboto-regular: 'Roboto Regular', sans-serif;
-$roboto-light: 'Roboto Light', sans-serif;
-$roboto-bold: 'Roboto Bold', sans-serif;
-$roboto-medium: 'Roboto Medium', sans-serif;
-$frank-regular: 'Frank Ruhl Libre Regular', serif;
-$frank-bold: 'Frank Ruhl Libre Bold', serif;
-$frank-medium: 'Frank Ruhl Libre Medium', serif;
+// $roboto-regular: 'Roboto Regular', sans-serif;
+// $roboto-light: 'Roboto Light', sans-serif;
+// $roboto-bold: 'Roboto Bold', sans-serif;
+// $roboto-medium: 'Roboto Medium', sans-serif;
+// $frank-regular: 'Frank Ruhl Libre Regular', serif;
+// $frank-bold: 'Frank Ruhl Libre Bold', serif;
+// $frank-medium: 'Frank Ruhl Libre Medium', serif;
 // $opensans-regular: 'OpenSans-Regular', sans-serif;
 // $opensans-light: 'OpenSans-Light', sans-serif;
 // $opensans-bold: 'OpenSans-Bold', sans-serif;
