--- a/src/modules/packages/Gold/goldPackage.scss
+++ b/src/modules/packages/Gold/goldPackage.scss
@@ -371,6 +371,7 @@
   margin-bottom: 4rem;
 
   h3 {
+    font-family: $roboto;
     font-weight: 700;
     color: $white;
     text-align: left;
@@ -432,6 +433,7 @@
 
   h3 {
     color: $greyish-brown-six;
+    font-family: $roboto;
     font-weight: 700;
     font-size: 2.25rem;
     margin: 2rem 0 1rem;
