Revert "Wishlist func fixes (pull request #306)"
This reverts pull request #306.

> * Wishlist mobile collapse snap fix
> * fix

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -295,13 +295,10 @@ a {
     border-right: 1rem solid $white;
     border-bottom: .7rem solid transparent;
   }
-
   @include mobile {
     position: fixed;
-    width: 250px;
-    left: 10%;
-    top: 60px;
-    margin: 0 auto;
+    width: 40%;
+    left: unset;
   }
 }
 
@@ -370,15 +367,11 @@ a {
     @include padding(8,16);
     border: 1px solid rgba(0, 0, 0, 0.13) !important;
   }
-
   @include mobile {
     position: fixed;
-    width: 260px;
-    right: 15%;
-    left: 0;
-    top: 60px;
-    margin: 0 auto;
-    z-index: 10;
+    right: auto;
+    width: 40%;
+    z-index: 1;
   }
 }
 
