--- a/src/modules/detailPage/detailPageComponent.scss
+++ b/src/modules/detailPage/detailPageComponent.scss
@@ -39,6 +39,7 @@
   margin: -60px 0 16px;
 
   h3 {
+    font-family: $roboto;
     font-weight: 700;
     @include fontSize(30);
     letter-spacing: .5px;
@@ -187,6 +188,7 @@
   }
 
   h3 {
+    font-family: $roboto;
     font-size: 18px;
     font-weight: 500;
     @include tablet {
@@ -441,6 +443,7 @@
 }
 
 .note-header {
+  font-family: $roboto;
   font-weight: 700;
   @include fontSize(20);
   letter-spacing: .6px;
