--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import '../variables/colors';
 @import '../variables/breakpoints';
 @import "node_modules/react-image-gallery/styles/scss/image-gallery.scss";
+@import "./../../node_modules/react-datepicker/dist/react-datepicker.min.css" ;  
 
 .jumbotron {
   border-radius: 0;
@@ -586,7 +587,14 @@ button {
 input[id="contactDate"] {
   width: 100%;
   -webkit-appearance: none;
-}
+  height: 33px;
+  margin-top: 10px;
+  border: 1px solid $medium-pink;
+  border-radius: 5px;
+  padding: .5em;
+  @include fontSize(18);
+	font-weight: 400;
+ }
 
 input[id="contactDate"].placeholderclass::before {
   width: 100%;
