--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -171,7 +171,7 @@ a {
   margin: 0;
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
   @include mobile {
     justify-content: flex-start;
   }
