--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -452,7 +452,6 @@
 // talk to poppup fix
 
 .call-btn {
-
   background-color: $white;
   @include padding(19);
   border-radius: 50%;
@@ -540,6 +539,7 @@ button {
 
 .flex {
   display: flex;
+  position: relative;
 }
 
 .pulsateRing {
@@ -547,7 +547,7 @@ button {
   border-radius: 50%;
   height: 5rem;
   width: 5rem;
-  position: absolute;
+  position: fixed;
   animation: pulsate 1.5s ease-out;
   animation-iteration-count: infinite;
   opacity: .0;
