added a function to change password

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,11 +10,7 @@
 }
 
 .ah-header {
-  //added by ankita
-  //position: fixed;
-  position: relative;
-  height: 0px;
-  //till here
+  position: fixed;
   top: 0px;
   left: 0;
   width: 100%;
