--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -26,7 +26,7 @@
 
   .detailBox {
     .leftSection {
-      @include padding(40);
+      @include padding(60, 40);
       border-right: 2px solid $medium-pink;
       text-align: right;
 
@@ -34,7 +34,7 @@
         font-size: 3.3rem;
         color: $greyish-brown-six;
         @include letterSpacing(0.2);
-
+        line-height: 5rem;
       }
     
       hr {
@@ -48,12 +48,13 @@
         li {
           @include padding(10,0);
           font-size: 1.67rem;
+          cursor: pointer;
         }
       }
     }
 
     .rightSection {
-      @include padding(40);
+      @include padding(60, 40);
       color: white;
 
       img {
