--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,7 +11,7 @@
 
 .ah-header {
   position: fixed;
-  top: 0px;
+  top: 0;
   left: 0;
   width: 100%;
   z-index: 100;
@@ -39,7 +39,6 @@
     }
   }
 }
-
 
 .nav-small {
   @include mobile {
@@ -258,8 +257,7 @@
 }
 
 .login-modal {
-  @include width(1385);
-  
+  @include width(1385);  
 }
 
 .user-info {
