--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -44,8 +44,12 @@
 
     .iconContainer {
       display: flex;
-    width: 100%;
+      width: 100%;
       justify-content: space-around;
+
+      img {
+        cursor: pointer;
+      }
     }
   }
 
