--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -7,27 +7,28 @@
   color: $black;
 
   h1 {
-    font-size: 5rem;
+    font-size: 4.286rem;
     color: $white;
-    margin-top: 15rem;
+    text-align: left;
   }
 
   h4 {
     color: white;
     font-family: $roboto;
     font-weight: 300;
-    font-size: 1.83rem;
+    font-size: 1.57rem;
     line-height: 1.36;
   }
 
   .servicesCover {
-    height: 42vw;
+    height: 47vw;
     position: relative;
     background: url('#{$image-base-url}/services-banner.png');
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
+    padding-left: 10%;
     @include mobile {
       height: 48vw;
     }
@@ -35,17 +36,17 @@
     .coverDetail {
       display: flex;
       flex-direction: column;
-      width: 35%;
-      height: 70%;
+      width: 37rem;
+      height: 100%;
       align-items: center;
-      justify-content: space-around;
-      margin-left: 5%;
+      justify-content: center;
     }
 
     .iconContainer {
       display: flex;
       width: 100%;
       justify-content: space-around;
+      margin-top: 3rem;
 
       img {
         cursor: pointer;
@@ -66,7 +67,7 @@
       text-align: right;
 
       h3 {
-        font-size: 3.3rem;
+        font-size: 2.857rem;
         color: $greyish-brown-six;
         @include letterSpacing(0.2);
         line-height: 5rem;
@@ -82,8 +83,10 @@
     
         li {
           @include padding(10,0);
-          font-size: 1.67rem;
+          font-size: 1.43rem;
           cursor: pointer;
+          font-weight: 500;
+          color: $greyish-brown;
         }
       }
     }
@@ -97,10 +100,10 @@
       }
 
       .vowIcon {
-        width: 4.5rem;
+        width: 3.857rem;
         position: absolute;
-        left: -2.25rem;
-        top: -1rem;
+        left: -1.95rem;
+        top: 0;
       }
 
       .description {
@@ -118,7 +121,7 @@
     
         li {
           @include padding(10, 0, 10, 40);
-          font-size: 1.5rem;
+          font-size: 1.43rem;
           background: url('#{$image-base-url}/detail-icon.png') left 0.5rem no-repeat;
           background-size: 30px; 
         }
@@ -126,6 +129,8 @@
       
       h2 {
         color: $greyish-brown-six;
+        font-weight: 500;
+        font-size: 3.57rem;
       }
 
       .pink {
@@ -136,6 +141,12 @@
         color: $greyish-brown-six;
         width: 90%;
       }
+
+    }
+    &:last-child {
+    .rightSection, .leftSection {
+      padding-bottom: 0;
+    }
 
     }
   }
