--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -41,8 +41,7 @@ body {
 
 #root {
   min-height: 100%;
-  position: relative; 
- 
+  position: relative;
 }
 
 h1,
@@ -68,8 +67,7 @@ h2 {
   margin-top: calc(48px + 8.1rem);
   @include mobile {
     margin-top: 73px;
-  };
-  
+  }
 }
 
 .primary-button {
