--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -50,6 +50,20 @@
 
       img {
         cursor: pointer;
+        opacity: 0;
+        animation-name: iconAnimation;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+        animation-delay: .5s;
+        &:nth-child(2) {
+          animation-delay: 1s;
+        }
+        &:nth-child(3) {
+          animation-delay: 1.5s;
+        }
+        &:nth-child(4) {
+          animation-delay: 2s;
+        }
       }
     }
   }
@@ -150,4 +164,8 @@
 
     }
   }
+}
+@keyframes iconAnimation {
+  from {opacity: 0; }
+  to {opacity: 1; }
 }
