--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -58,7 +58,7 @@
   width: max-content;
   margin: -41px auto 0;
   display: flex;
-
+  justify-content: center;
   .dropContainer {
     box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.3);
     display: flex;
