--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -259,7 +259,7 @@
 .pagination {
   margin: 0 auto;
   width: max-content;
-
+  justify-content: center;
   li {
     background-color: $white;
     padding: .25rem 1rem;
